fix scrollbars

--- a/www/src/styles/global.css
+++ b/www/src/styles/global.css
@@ -42,10 +42,6 @@
     @apply scrollbar-thin scrollbar-track-transparent scrollbar-thumb-t3-purple-300 dark:scrollbar-track-transparent dark:scrollbar-thumb-t3-purple-300;
   }
 
-  .t3-scrollbar {
-    @apply scrollbar-thin scrollbar-track-slate-300 scrollbar-thumb-t3-purple-300 dark:scrollbar-track-t3-purple-200/10 dark:scrollbar-thumb-t3-purple-300;
-  }
-
   /* Typewriter */
   .cursor::after {
     display: block;
@@ -107,8 +103,16 @@
     text-align: left;
   }
 
+  .t3-scrollbar {
+    @apply scrollbar-thin scrollbar-track-slate-300 scrollbar-thumb-t3-purple-300 dark:scrollbar-track-t3-purple-200/10 dark:scrollbar-thumb-t3-purple-300;
+  }
+
   /* only at less than md */
   @media (max-width: 767px) {
+    .t3-scrollbar-sm-only {
+      @apply scrollbar-thin scrollbar-track-slate-300 scrollbar-thumb-t3-purple-300 dark:scrollbar-track-t3-purple-200/10 dark:scrollbar-thumb-t3-purple-300;
+    }
+
     .mobile-sidebar-toggle {
       overflow: hidden;
       height: 100vh;
